Fix user settings modal not showing when account has no boards bug.

--- a/app/account/styles/_content.styl
+++ b/app/account/styles/_content.styl
@@ -6,8 +6,14 @@
       display: block !important;
     }
 
+    .note-modal,
+    .share-board,
+    .cards-empty,
+    .file-uploader,
+    .account-page-header,
+    .board-collaborators,
     .account-page-sidebar,
-    .account-page-content {
+    .account-page-content-section {
       display: none !important;
     }
   }
